# auctions

./: README.md  docker-compose.yaml
.github/workflows/: auctions-svc.yml
auction_svc/: .pylintrc  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
auction_svc/src/auctions/: config.py  database.py  main.py  models.py  repositories.py  seed.py
bid_svc/: README.md  pyproject.toml
notification_svc/: README.md  pyproject.toml  tox.ini
search_svc/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
search_svc/src/search/: main.py
