[tool.poetry]
name = "auctions"
version = "0.1.0"
description = "Auctions demo: auction microservice"
authors = ["Piotr Święcik <piotr.swiecik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.3"
psycopg = {extras = ["binary"], version = "^3.1.19"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pytest-sugar = "^1.0.0"
pytest = "^8.2.2"
pylint = "^3.2.3"
tox = "^4.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
